# move-fuzzer

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: integration-test.yml
contracts/aptos-demo/: Move.toml
contracts/aptos-demo/sources/: aptos_demo.move
contracts/sui-demo/: Move.toml
contracts/sui-demo/sources/: shl_demo.move
contracts/sui-demo/tests/: shl_demo_tests.move
crates/aptos-afl-executor/: Cargo.toml
crates/aptos-afl-executor/src/: aptos_move_executor.rs
crates/aptos-executor/: Cargo.toml
crates/aptos-executor/src/: aptos_custom_state.rs  aptos_move_executor.rs  types.rs
crates/aptos-fuzzer/: Cargo.toml
crates/aptos-fuzzer-common/: Cargo.toml
crates/aptos-fuzzer-common/src/: lib.rs
crates/aptos-fuzzer-executor/: Cargo.toml
crates/aptos-fuzzer-executor/src/: aptos_move_executor.rs  lib.rs
crates/aptos-fuzzer-input/: Cargo.toml
crates/aptos-fuzzer-input/src/: lib.rs
crates/aptos-fuzzer-mutator/: Cargo.toml
crates/aptos-fuzzer-mutator/src/: lib.rs
crates/aptos-fuzzer-state/: Cargo.toml
crates/aptos-fuzzer-state/src/: lib.rs
crates/aptos-fuzzer/src/: feedback.rs  input.rs  lib.rs  mutator.rs  observer.rs  observers.rs  state.rs
crates/aptos-fuzzer/src/executor/: aptos_custom_state.rs  aptos_move_executor.rs  custom_state_view.rs  mod.rs
crates/aptos-generator/: Cargo.toml
crates/aptos-generator/src/: lib.rs
crates/aptos-mutator/: Cargo.toml
crates/aptos-mutator/src/: lib.rs
crates/aptos-objective/: Cargo.toml
crates/aptos-objective/src/: lib.rs
crates/aptos-private-node/: Cargo.toml  README.md
crates/aptos-private-node/src/: aptos_private_node_config.rs  config.rs  executor.rs  lib.rs  move_executor.rs  snapshot.rs  state_manager.rs  transaction_result.rs
crates/aptos_move_executor/: Cargo.toml  README.md
crates/aptos_move_executor/src/: lib.rs  overlay_state_view.rs  state_manager.rs  transaction_result.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/fuzzer-core/: Cargo.toml
crates/fuzzer-core/src/: cache.rs  fuzzer.rs  reporter.rs  types.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs
crates/sui-fuzzer/: Cargo.toml
crates/sui-fuzzer/src/: error.rs  lib.rs  types.rs
crates/sui-fuzzer/src/mutation/: mod.rs
crates/sui-fuzzer/src/mutation/strategies/: boundary_value.rs  power_of_two.rs  random.rs
crates/sui-old-unused/: README.md
crates/sui-old-unused/fuzzer-core/src/: cache.rs  config.rs  lib.rs
crates/sui-old-unused/sui-fuzzer/src/: lib.rs  types.rs
crates/sui-old-unused/sui-fuzzer/src/mutation/: orchestrator.rs  strategy.rs
crates/sui-old-unused/sui-fuzzer/src/mutation/strategies/: mod.rs  random.rs
crates/sui-old-unused/sui-simulator/: Cargo.toml
crates/sui-old-unused/sui-simulator/contracts/shift_left/: Move.toml
crates/sui-old-unused/sui-simulator/contracts/shift_left/tests/: shift_left_tests.move
crates/sui-old-unused/sui-simulator/examples/: transfer_sui.rs
crates/sui-old-unused/sui-simulator/src/: db_simulator.rs  lib.rs  rpc_backing_store.rs
crates/sui-old-unused/sui-tracer/: Cargo.toml
crates/sui-old-unused/sui-tracer/src/: shift_violation_tracer.rs
crates/sui-simulator/: Cargo.toml
crates/sui-simulator/contracts/shift_left/sources/: shift_left.move
crates/sui-simulator/examples/: db_shift_violation.rs  db_split_coin.rs  db_transfer_sui.rs  shift_violation.rs  split_coin.rs
crates/sui-simulator/src/: db_simulator.rs  rpc_simulator.rs
crates/sui-tracer/src/: shift_violation_tracer.rs  whitelist.rs
docs/: adding-new-chain.md  architecture.md  testing.md
scripts/: integration_test.py  requirements.txt  setup_aptos.sh  setup_sui.sh  sui  sui-linux.zst  test_cases.toml
