[workspace]

resolver = "2"
members = ["bin/libafl-aptos", "crates/aptos-fuzzer"]

exclude = ["external/aptos-core"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
aptos-fuzzer = { path = "crates/aptos-fuzzer" }

libafl = { version = "0.15.3" }
libafl_bolts = { version = "0.15.3" }

async-trait = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lru = "0.16"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bcs = "0.1.4"
eyre = "0.6"
thiserror = "2.0"
hex = "0.4"
dashmap = "6.1.0"

# Sui Specific dependencies
# sui-sdk = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-types = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-config = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-json-rpc = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-json-rpc-types = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-core = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-execution = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2", features = [
#     "tracing",
# ] }
# sui-storage = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-protocol-config = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-adapter-latest = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-natives-latest = { git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# # Rename to avoid conflict with aptos move crates
# sui-move-core-types = { package = "move-core-types", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-vm-types = { package = "move-vm-types", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-binary-format = { package = "move-binary-format", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-trace-format = { package = "move-trace-format", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-bytecode-utils = { package = "move-bytecode-utils", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-vm-config = { package = "move-vm-config", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }
# sui-move-vm-runtime = { package = "move-vm-runtime", git = "https://github.com/fuzzland/sui.git", rev = "6b7b1c2" }

schemars = "1.0"

# Aptos Specific dependencies
aptos-config = { path = "./external/aptos-core/config" }
aptos-crypto = { path = "./external/aptos-core/crates/aptos-crypto" }
aptos-db = { path = "./external/aptos-core/storage/aptosdb" }
aptos-executor = { path = "./external/aptos-core/execution/executor" }
aptos-gas-schedule = { path = "./external/aptos-core/aptos-move/aptos-gas-schedule" }
aptos-native-interface = { path = "./external/aptos-core/aptos-move/aptos-native-interface" }
aptos-storage-interface = { path = "./external/aptos-core/storage/storage-interface" }
aptos-types = { path = "./external/aptos-core/types" }
aptos-vm = { path = "./external/aptos-core/aptos-move/aptos-vm" }
aptos-vm-genesis = { path = "./external/aptos-core/aptos-move/vm-genesis" }
aptos-vm-environment = { path = "./external/aptos-core/aptos-move/aptos-vm-environment" }
aptos-vm-logging = { path = "./external/aptos-core/aptos-move/aptos-vm-logging" }
aptos-vm-types = { path = "./external/aptos-core/aptos-move/aptos-vm-types" }
aptos-aggregator = { path = "./external/aptos-core/aptos-move/aptos-aggregator" }
aptos-move-table-extension = { package = "move-table-extension", path = "./external/aptos-core/third_party/move/extensions/move-table-extension" }
aptos-move-core-types = { package = "move-core-types", path = "./external/aptos-core/third_party/move/move-core/types" }
aptos-move-binary-format = { package = "move-binary-format", path = "./external/aptos-core/third_party/move/move-binary-format" }
aptos-move-vm-types = { package = "move-vm-types", path = "./external/aptos-core/third_party/move/move-vm/types" }
aptos-move-vm-runtime = { package = "move-vm-runtime", path = "./external/aptos-core/third_party/move/move-vm/runtime" }

bytes = "=1.10.1"

# allow transcript labels to come from non-Rust code
# https://github.com/aptos-labs/aptos-core/issues/9340
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }