[package]
name = "aptos-fuzzer"
edition.workspace = true
version.workspace = true

[dependencies]
aptos-config = { workspace = true }
aptos-db = { workspace = true }
aptos-executor = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-move-table-extension = { workspace = true }
aptos-move-core-types = { workspace = true }
aptos-move-binary-format = { workspace = true }
aptos-move-vm-types = { workspace = true }
aptos-move-vm-runtime = { workspace = true }
bytes = { workspace = true }

libafl = { workspace = true }
libafl_bolts = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
bcs = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
