[package]
name = "aptos-private-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Core Aptos dependencies for state management and execution
aptos-config = { workspace = true }
aptos-db = { workspace = true }
aptos-executor = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }

# Basic utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bcs = "0.1"
async-trait = "0.1"
simulator = { path = "../simulator" }

[features]
default = []
testing = []
